--- a/client/src/app/pages/users/users.component.html
+++ b/client/src/app/pages/users/users.component.html
@@ -27,8 +27,8 @@
 
             <button mz-button
             type="button"
-            (click)="clearUsers"
-            (click)="usernameInput.value=''">Clear
+            (click)="clearUsers()"
+            (click)="login.value=''">Clear
             </button>
 
             <button mz-button
