--- a/client/src/app/pages/bits/bits.component.scss
+++ b/client/src/app/pages/bits/bits.component.scss
@@ -5,3 +5,40 @@
  * @Last Modified time: 2018-06-18 20:20:28
  */
 
+// Form
+#bits-leaderboard-form-container {
+  padding: 0px 20px 0px 20px !important;
+}
+
+#count-input-field {
+  color: #37474F !important;
+}
+
+#datepicker {
+  color: #37474F !important;
+}
+
+#timepicker {
+  color: #37474F !important;
+}
+
+#user-id-input-field {
+  color: #37474F !important;
+}
+
+#options-select {
+  color: #37474F !important;
+}
+
+// Section
+.section {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding-left: 100px;
+  padding-right: 100px;
+}
+
+// Icons
+#input-prefix-icon {
+  color: #37474F !important;
+}
