--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -11,6 +11,11 @@
 
 // OVERRIDES
 
+// Input field
+// mz-input {
+//   color: #ffffff !important;
+// }
+
 /// NAVBAR
 nav {
   min-height: 80px !important;
