--- a/client/src/app/pages/users/users.component.html
+++ b/client/src/app/pages/users/users.component.html
@@ -5,7 +5,7 @@
 
       <!-- GET USER BY NAME -->
       <mz-tab-item [active]="'true'" [label]="'Get user by name'" class="tab-content">
-        
+
         <!-- REQUEST SECTION -->
         <div class="section">
           <h5>Request</h5>
@@ -52,7 +52,7 @@
                     <div class="row">
                       <img class="col s4" src={{user.profile_image_url}}>
                       <div class="col s8">
-                        <p>User id: {{ user.id }}</p>
+                        <p>User id: {{ user.user_id }}</p>
                         <p>User description: {{ user.description }}</p>
                         <p>Broadcaster type: {{ user.broadcaster_type }}</p>
                         <p>Channel view count: {{ user.view_count }}</p>
@@ -66,7 +66,7 @@
                 </mz-card>
               </div>
             </div>
-          </div>  
+          </div>
         </div>
       </mz-tab-item>
 
@@ -120,7 +120,7 @@
                     <div class="row">
                       <img class="col s4" src={{user.profile_image_url}}>
                       <div class="col s8">
-                        <p>User id: {{ user.id }}</p>
+                        <p>User id: {{ user.user_id }}</p>
                         <p>User description: {{ user.description }}</p>
                         <p>Broadcaster type: {{ user.broadcaster_type }}</p>
                         <p>Channel view count: {{ user.view_count }}</p>
@@ -134,7 +134,7 @@
                 </mz-card>
               </div>
             </div>
-          </div>  
+          </div>
         </div>
       </mz-tab-item>
     </mz-tab>
