--- a/client/src/app/pages/bits/bits.component.scss
+++ b/client/src/app/pages/bits/bits.component.scss
@@ -2,8 +2,28 @@
  * @Author: Nizars
  * @Date: 2018-06-18 20:20:28
  * @Last Modified by: Nizars
- * @Last Modified time: 2018-06-18 20:20:28
+ * @Last Modified time: 2018-06-21 16:47:02
  */
+
+// Badge
+.rankBadge {
+  color: #263238 !important;
+  background-color: gold !important;
+  font-size: 24px !important;
+  font-weight: bold !important;
+  line-height: 24px !important;
+  min-height: 32px !important;
+  width: 32px !important;
+  float: left !important;
+  margin: 0px 20px 0px 0px !important;
+  padding: 4px 4px 4px 4px !important;
+}
+
+.entryCardContent {
+  padding: 20px !important;
+  font-size: 18px !important;
+  line-height: 24px !important;
+}
 
 // Form
 #bits-leaderboard-form-container {
