--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -50,17 +50,17 @@ ul#nav-mobile.right {
 
 
 /// CARDS
-.card-content {
-  padding: 0px !important;
-  
-}
+// .card-content {
+//   padding: 0px !important;
 
-.card-title {
-  padding: 24px;
-  margin: 0px !important;
-  color: #ffffff;
-  background-color: #2196f3;
-}
+// }
+
+// .card-title {
+//   padding: 24px;
+//   margin: 0px !important;
+//   color: #ffffff;
+//   background-color: #2196f3;
+// }
 
 
 /// TABS
