Chat works on front end

--- a/client/src/app/pages/chat/chat.component.html
+++ b/client/src/app/pages/chat/chat.component.html
@@ -6,25 +6,44 @@
     <div class="section previewSection">
       <h5>Chat Preview</h5>
       <div class="row">
-        <div class="col">
+        <div class="col s12">
           <div class="card-panel z-depth-0 light-green accent-4 chat-preview">
-            <div *ngFor="let message of chatMessages">
-              <div class="section">
-                <div>Badges: {{message.badges}}</div>
-                <div>Color: {{message.color}}</div>
-                <div>Display name: {{message.display_name}}</div>
-                <div>Emotes: {{message.emotes}}</div>
-                <div>Message ID: {{message.message_id}}</div>
-                <div>Mod: {{message.mod}}</div>
-                <div>Room ID: {{message.room_id}}</div>
-                <div>Subscriber: {{message.subscriber}}</div>
-                <div>Timestamp: {{message.time_stamp}}</div>
-                <div>Turbo: {{message.turbo}}</div>
-                <div>User ID: {{message.user_id}}</div>
-                <div>Type: {{message.type}}</div>
-                <div>Twitch name: {{message.twitch_name}}</div>
-                <div>Message: {{message.message}}</div>
+            <div *ngFor="let msg of chatMessagesContainer">
+
+              <div class="messageBubble">
+                <span class="timeStamp">
+                  <span class="preTimeStamp">{{preTimeStamp}}</span>
+                  <span class="timeStampValue">{{msg.time_stamp}}</span>
+                  <span class="postTimeStamp">{{postTimeStamp}}</span>
+                  <span class="timeStampSeparator">{{timeStampSeparator}}</span>
+                </span>
+
+
+
+
+                <span class="displayName" [style.color]="msg.color">{{msg.display_name}}</span>
+                <span class="displayNameSeparator">{{displayNameSeparator}}</span>
+                <span class="message">{{msg.message}}</span>
               </div>
+
+
+
+              <!-- <div class="section">
+                <div>Badges: {{msg.badges}}</div>
+                <div>Color: {{msg.color}}</div>
+                <div>Display name: {{msg.display_name}}</div>
+                <div>Emotes: {{msg.emotes}}</div>
+                <div>Message ID: {{msg.message_id}}</div>
+                <div>Mod: {{msg.mod}}</div>
+                <div>Room ID: {{msg.room_id}}</div>
+                <div>Subscriber: {{msg.subscriber}}</div>
+                <div>Timestamp: {{msg.time_stamp}}</div>
+                <div>Turbo: {{msg.turbo}}</div>
+                <div>User ID: {{msg.user_id}}</div>
+                <div>Type: {{msg.type}}</div>
+                <div>Twitch name: {{msg.twitch_name}}</div>
+                <div>Message: {{msg.message}}</div>
+              </div> -->
             </div>
           </div>
         </div>
