--- a/client/src/app/pages/chat/chat.component.scss
+++ b/client/src/app/pages/chat/chat.component.scss
@@ -5,15 +5,58 @@
  * @Last Modified time: 2018-05-27 10:13:30
  */
 
-.thumbnail {
-    max-width: 300px;
-    border-radius: 5px;
+
+.messageBubble {
+  background: linear-gradient(rgba(54,54,54,0.5) 0%, rgba(33,33,33,0.5) 100%);
+  box-shadow: 0 0 5px rgba(4, 5, 0, 9);
+  color: #fff;
+  height: 2em;
+  line-height: 2em;
+  width: 100%;
+  opacity: 1;
+  margin-top: 10px;
+  transition: all 0.85s cubic-bezier(.23,.14,.73,.98);
+  border-radius: 5px;
+  overflow: hidden;
+  padding: 3px 20px 3px 20px;
 }
 
-.userInfo {
-    font-size: 18px;
-    color: rgb(75, 75, 75);
-    font-weight: lighter;
+
+// TIME
+.timeStamp {
+  color: #cfd8dc;
+  padding-right: 10px;
+
 }
 
-.box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
+.preTimeStamp {
+
+}
+
+.timeStampValue {
+
+}
+
+.postTimeStamp {
+
+}
+
+.timeStampSeparator {
+  padding-left: 2px;
+}
+
+
+// NAME
+.displayName {
+
+}
+
+.displayNameSeparator {
+  padding-right: 10px;
+}
+
+
+// MESSAGE
+.message {
+
+}
