Implemented popup window for authentication

--- a/client/src/app/pages/signin/signin.component.html
+++ b/client/src/app/pages/signin/signin.component.html
@@ -9,7 +9,7 @@
       </div>
       <div class="row">
         <div class="col l4">
-          <a class="waves-effect waves-light btn twitch-btn" (click)="loadingStart()" href="http://localhost:3000/auth/twitch">
+          <a class="waves-effect waves-light btn twitch-btn" (click)="signIn()">
             <div class="valign-wrapper">
               <img class="twitch-icon left" src="../../../assets/images/Twitch/GlitchIcon_White_32px.png">Connect with Twitch
             </div>
@@ -18,15 +18,15 @@
         <div class="col l8">
           <div id="sign-in-page-pic">
             <div class="row">
-                <div class="col s12 m7">
-                  <div class="card">
-                    <div class="card-image">
-                      <img src="../../../assets/images/signin/DashboardImage.png">
-                            <div class="card-title">Streamer Dashboard</div>
-                    </div>
+              <div class="col s12 m7">
+                <div class="card">
+                  <div class="card-image">
+                    <img src="../../../assets/images/signin/DashboardImage.png">
+                      <div class="card-title">Streamer Dashboard</div>
                   </div>
                 </div>
               </div>
+            </div>
           </div>
         </div>
       </div>
